# ToDoApp

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE  README.md  build.ninja
src/Code/: main.cpp
src/Code/Classes/: Entry.cpp
src/Headers/: Entry.h  TagManager.h  Task.h  Taskmanager.h
